# OOP_lab_5

./: CMakeLists.txt
include/: MapMemoryResource.h  pmr_slist.h
src/: MapMemoryResource.cpp  main.cpp
tests/: tests.cpp
